OdTvGsDevice.Options.kBlocksCache is added to Settings

--- a/common/config/HCL_ODA_TestPAD_AppSettings_HCL.json
+++ b/common/config/HCL_ODA_TestPAD_AppSettings_HCL.json
@@ -9,6 +9,7 @@
 	"UseSceneGraph": true,
 	"RenderDevice": 0,
 	"UseForcePartialUpdate": true,
+	"UseBlocksCache": true,
 	"SetForbidImageHighlight": true,
 	"DwgSetObjectNaming": true,
 	"DwgSetStoreSourceObjects": true,
