IServiceFactory introduced. IAppSettings removed. Immutability enforced.

--- a/common/config/HCL_ODA_TestPAD_AppSettings_HCL.json
+++ b/common/config/HCL_ODA_TestPAD_AppSettings_HCL.json
@@ -1,32 +1,1 @@
-{
-	"ShowSplashScreen": false,
-	"ShowAboutAnimation": true,
-	"CadFileUnit": 0,
-	"AppLayout": 0,
-	"SaveDockLayout": true,
-	"SetFrozenLayersVisible": true,
-	"UseSceneGraph": true,
-	"RenderDevice": 0,
-	"UseForcePartialUpdate": true,
-	"UseBlocksCache": true,
-	"SetForbidImageHighlight": true,
-	"AutoRegeneration": true,
-	"RegenThreshold": 0.01,
-	"RegenMode": 1,
-	"Interactivity": true,
-	"InteractiveFPS": 30.0,
-	"DwgSetObjectNaming": true,
-	"DwgSetStoreSourceObjects": true,
-	"DwgSetImportFrozenLayers": true,
-	"DwgSetClearEmptyObjects": true,
-	"DwgSetNeedCDATree": false,
-	"DwgSetNeedCollectPropertiesInCDA": false,
-	"IfcUseSceneGraph": false,
-	"IfcSetNeedCDATree": false,
-	"IfcSetNeedCollectPropertiesInCDA": false,
-	"ShowFPS": true,
-	"ShowWCS": true,
-	"ShowCube": true,
-	"SaveSettings": true,
-	"SettingsMode": 0
-}
+{"ShowSplashScreen":false,"ShowAboutAnimation":true,"CadFileUnit":0,"EnableImportUnitChange":false,"CadImportUnit":0,"AppLayout":0,"SaveDockLayout":true,"SetFrozenLayersVisible":true,"UseSceneGraph":true,"RenderDevice":0,"UseForcePartialUpdate":true,"UseBlocksCache":true,"SetForbidImageHighlight":true,"AutoRegeneration":true,"RegenThreshold":0.01,"RegenMode":1,"Interactivity":true,"InteractiveFPS":30.0,"DwgSetObjectNaming":true,"DwgSetStoreSourceObjects":true,"DwgSetImportFrozenLayers":true,"DwgSetClearEmptyObjects":true,"DwgSetNeedCDATree":false,"DwgSetNeedCollectPropertiesInCDA":false,"IfcUseSceneGraph":false,"IfcSetNeedCDATree":false,"IfcSetNeedCollectPropertiesInCDA":false,"ShowFPS":true,"ShowWCS":true,"ShowCube":true,"SaveSettings":true,"SettingsMode":0}
